kubernetes/apps/network/external-services/ingress/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app minio-proxy
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/name: *app
---
apiVersion: v1
kind: Service
metadata:
  name: &appui minio-proxy-ui
  namespace: network
  labels:
    app.kubernetes.io/name: *appui
    app.kubernetes.io/instance: *appui
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9001
      targetPort: 9001
  selector:
    app.kubernetes.io/name: *appui

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app minio-proxy
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.negative7.com
spec:
  ingressClassName: internal-nginx
  rules:
    - host: &host 'minio.negative7.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 9000
  tls:
    - hosts:
        - *host
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &appui minio-proxy-ui
  namespace: network
  labels:
    app.kubernetes.io/name: *appui
    app.kubernetes.io/instance: *appui
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.negative7.com
spec:
  ingressClassName: internal-nginx
  rules:
    - host: &hostui 'minio-ui.negative7.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *appui
                port:
                  number: 9001
  tls:
    - hosts:
        - *hostui

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app minio-proxy
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    kubernetes.io/service-name: *app
addressType: IPv4
ports:
  - name: http
    port: 9000
    protocol: TCP
endpoints:
  - addresses:
      - 10.2.0.10
    conditions:
      ready: true

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &appui minio-proxy-ui
  namespace: network
  labels:
    app.kubernetes.io/name: *appui
    kubernetes.io/service-name: *appui
addressType: IPv4
ports:
  - name: http
    port: 9001
    protocol: TCP
endpoints:
  - addresses:
      - 10.2.0.10
    conditions:
      ready: true
